--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -207,6 +207,8 @@ pt-BR:
           mb: MB
           pb: PB
           tb: TB
+    nth:
+      ordinalized: '%{number}º'
     percentage:
       format:
         delimiter: "."
