Fix date formatting in English

--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -266,7 +266,7 @@
         "Saturday"
       ],
       "formats": {
-        "default": "%Y-%m-%d",
+        "default": "%d/%m/%Y",
         "long": "%B %d, %Y",
         "short": "%b %d"
       },
