--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -116,6 +116,9 @@
           },
           "profile": {
             "attributes": {
+              "base": {
+                "cannot_disable_current_profile": "profile is in use"
+              },
               "currency": {
                 "cannot_change_after_creation": "cannot be changed. Please create a new profile for the currency"
               }
@@ -681,6 +684,7 @@
         "success": "Profile \"%{name}\" was successfully created."
       },
       "destroy": {
+        "error": "Profile \"%{name}\" cannot be disabled: %{error}",
         "success": "Profile \"%{name}\" was successfully disabled."
       },
       "reenable": {
