--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -967,6 +967,11 @@
           "status_label": "Status",
           "target_wallet_label": "To Wallet"
         },
+        "layout": {
+          "month_picker_input": {
+            "today_label": "Today"
+          }
+        },
         "match_transaction_selector_modal": {
           "amount_label": "Amount",
           "cancel": "Cancel",
@@ -1046,7 +1051,7 @@
           "sub_header_daily_totals_chart": "Daily Totals",
           "sub_header_recent_transactions": "Recent Transactions",
           "sub_header_transactions_summary": "Position",
-          "title": "Welcome, %{name}"
+          "title": "Home"
         }
       },
       "devise": {
