--- a/config/locales/views.pt-BR.yml
+++ b/config/locales/views.pt-BR.yml
@@ -133,6 +133,9 @@ pt-BR:
         name_label: Arquivo de Origem
         target_wallet_label: Carteira Alvo
         status_label: Status
+      layout:
+        month_picker_input:
+          today_label: Hoje
       match_transaction_selector_modal:
         title: Selecione transação para combinar
         name_label: Nome
@@ -187,7 +190,7 @@ pt-BR:
 
     dashboard:
       show:
-        title: "Bem vindo, %{name}"
+        title: Página Inicial
         sub_header_recent_transactions: Transações Recentes
         sub_header_category_summary: Categorias
         sub_header_transactions_summary: Posição
