--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -1257,7 +1257,7 @@
           "light": "Claro"
         },
         "footer": {
-          "copyright_notice": "© 2024 Rodrigo Castro",
+          "copyright_notice": "© %{year} Rodrigo Castro",
           "version": "Versão"
         },
         "forms": {
@@ -1320,6 +1320,7 @@
           "categories": "Categorias",
           "current_profile": "Perfil:",
           "dashboard": "Dashboard",
+          "home": "Início",
           "imports": "Importação de Transações",
           "imports_list": "Listar Importações",
           "imports_settings": "Configurar Importações",
