--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -1350,6 +1350,8 @@
           "calculated_balance_info_text": "This balance was calculated by summing the amounts from all transaction since the last reconciliation, or since the start, if this is the first reconciliation.",
           "cancel_mass_edit_transactions": "Cancel Bulk Edit",
           "difference_balance": "Divergence",
+          "difference_sm_balance": "Diff",
+          "divergence_info_text": "This is the difference betwen the actual reported balance and the calculated wallet balance. Negative divergences indicate you have less money than calculated, which possibly indicates an underreporting of transactions in the reconciliation period.",
           "enter_mass_edit_transactions": "Bulk Edit",
           "new_transaction": "New Transaction",
           "real_balance": "Actual",
@@ -1365,7 +1367,7 @@
           "table_header_wallet_name": "Wallet",
           "title": "Reconciliation for %{date}",
           "total": "Total",
-          "unspecified": "Unspecified",
+          "unspecified": "- No Wallet -",
           "unspecified_balance_cannot_be_edited": "Unspecified balance refers to the balance sum of transactions which do not have a wallet specified. Before finishing this reconciliation, all transactions must have their wallets set and this balance must be reduced to zero."
         }
       },
@@ -1467,7 +1469,6 @@
           "last_schedule_date": "Last Run",
           "next_run_at": "Next Run",
           "no_next_run": "-- Disabled --",
-          "no_wallet": "-- Not Specified --",
           "reenable": "Reenable",
           "run_on_transaction_date": "On the scheduled transaction date",
           "schedule": "Schedule",
@@ -1619,7 +1620,6 @@
           "import_label": "Imported by",
           "import_value": "Transaction Import",
           "name_label": "Name",
-          "no_wallet": "-- Not Specified --",
           "of_label": "of",
           "sub_header_summary": "Summary",
           "title": "Transaction",
