--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -1432,6 +1432,8 @@
           "new_transaction": "Nova Transação",
           "real_balance": "Real",
           "real_balance_info_text": "O saldo real deve refletir o valor contabilizado da carteira ao final do dia da reconciliação. Isso significa contar dinheiro em espécie, ou verificar o saldo de uma conta bancária, por exemplo.",
+          "reconciliation_wallets_help_message": "<p>\n  Saldos das Carteiras permite que você insira o valor real de cada carteira na data da reconciliação. Uma\n  carteira de conta de banco pode ter um valor calculado tal, mas quando você confere o saldo do banco, os\n  valores não batem. Ao invés de inspecionar transação por transação, você pode apenas inserir o saldo real\n  do banco, e quaisquer diferença no final será ajustada com uma transação de reconciliação.\n</p>\n<p>\n  Cada carteira mostra o saldo calculado a partir de todas as transações desde a última reconciliação. Depois\n  de inserir o saldo real da carteira, o valor da diferença entre o calculado e o real será exibido. qualquer\n  valor diferente de zero pode indicar um problema, como uma transação faltando, ou pode também indicar por\n  exemplo uma transferência entre carteiras que não foi inserida no aplicativo. Por exemplo, um saque do banco\n  pode tirar dinheiro da carteira do banco e botar dinheiro em uma carteira de dinheiro vivo.\n</p>\n<p>\n  O valor inserido em cada carteira será o valor base que será usado no cálculo do saldo para a próxima\n  reconciliação.\n</p>",
+          "reconciliation_wallets_help_title": "Como funciona",
           "status": "Status",
           "sub_header_actions": "Ações",
           "sub_header_balances": "Saldo Geral",
