--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -500,6 +500,27 @@ en:
           Unspecified balance refers to the balance sum of transactions which do not have a wallet specified. Before
           finishing this reconciliation, all transactions must have their wallets set and this balance must be reduced
           to zero.
+        reconciliation_wallets_help_title: How it works
+        reconciliation_wallets_help_message: >-
+          <p>
+            Wallet Balances allows you to input the actual balance for each wallet at the date of the reconciliation.
+            A bank account wallet might have a certain calculated value, but when you check your bank statement you see
+            that there's less money in the bank than in the wallet here. Instead of meticulously auditing each
+            individual transaction to find the culprit, you can just input the amount that you have for each wallet, and
+            if there are any differences at the end, a reconciliation transaction will be created to adjust the balance.
+          </p>
+
+          <p>
+            Each wallet shows the calculated balance amount from all transactions since the last reconciliation. After
+            inputting the actual wallet balance, a difference sum will show up. Any non-zero sum could indicate a
+            transaction issue, or it could also point to a transfer between wallets that was done without the app
+            knowing about it. For example, a bank withdrawal could take money from a bank wallet into a cash wallet.
+          </p>
+
+          <p>
+            The amount specified for each wallet will be the base amount that will be used to calculate the balance for
+            the next reconciliation.
+          </p>
     settings:
       show:
         title: My Account
